--- a/WebServer/src/main/webapp/index.html
+++ b/WebServer/src/main/webapp/index.html
@@ -8,7 +8,35 @@
 <body>
 
 <div class="container" style="margin-top: 10px;">
+
     <div class="row">
+        <div class="col-md-4">
+            <div class="container bg-light p-3">
+                <p>Create a new group</p>
+                <div class="input-group mb-3">
+                    <input id="groupName" type="text" class="form-control" placeholder="Group Name"
+                           aria-label="Enter group name"
+                           aria-describedby="button-addon2">
+                    <button class="btn btn-primary" type="button" onclick="createGroup();">Create Group</button>
+                </div>
+
+                <p>Group Actions</p>
+                <div class="input-group mb-3">
+                    <label for="userDropdown" class="input-group-text">Select User:</label>
+                    <select id="userDropdown" class="form-control"></select>
+                </div>
+
+                <div class="input-group mb-3">
+                    <label for="groupDropdown" class="input-group-text">Select Group:</label>
+                    <select id="groupDropdown" class="form-control"></select>
+                </div>
+
+                <div class="input-group mb-3">
+                    <button class="btn btn-primary me-2" type="button" onclick="addToGroup();">Add to Group</button>
+                    <button class="btn btn-danger" type="button" onclick="removeFromGroup();">Remove from Group</button>
+                </div>
+            </div>
+        </div>
 
         <div class="col-md-8">
             <form>
@@ -18,7 +46,8 @@
                                aria-label="Insert a name"
                                aria-describedby="button-addon2"
                         >
-                        <button id="conBtn" class="btn btn-outline-secondary" type="button" onclick="connectionCall();"
+                        <button id="conBtn" class="btn btn-outline-secondary" type="button"
+                                onclick="connectionCall();"
                                 value="Connect">Connect
                         </button>
                     </div>
@@ -41,12 +70,12 @@
                         <select id="userDropdownToSendTo" class="form-control">
                             <option>none</option>
                         </select>
-                        <button class="btn btn-outline-secondary" type="button" onclick="sendToUser();">Send To User
+                        <button class="btn btn-primary" type="button" onclick="sendToUser();">Send To User
                         </button>
                         <select id="groupDropdownToSendTo" class="form-control">
                             <option>none</option>
                         </select>
-                        <button class="btn btn-outline-secondary" type="button" onclick="sendToGroup();">Send To Group
+                        <button class="btn btn-primary" type="button" onclick="sendToGroup();">Send To Group
                         </button>
                     </div>
                 </div>
@@ -55,32 +84,9 @@
             </form>
         </div>
 
-        <div class="col-md-4">
-            <p>Create a new group</p>
-            <div class="input-group mb-3">
-                <input id="groupName" type="text" class="form-control" placeholder="Group Name"
-                       aria-label="Enter group name"
-                       aria-describedby="button-addon2">
-                <button class="btn btn-primary" type="button" onclick="createGroup();">Create Group</button>
-            </div>
 
-            <p>Add user to group</p>
-            <div class="input-group mb-3">
-                <label for="userDropdown" class="input-group-text">Select User:</label>
-                <select id="userDropdown" class="form-control"></select>
-            </div>
-
-            <div class="input-group mb-3">
-                <label for="groupDropdown" class="input-group-text">Select Group:</label>
-                <select id="groupDropdown" class="form-control"></select>
-            </div>
-
-            <div class="input-group mb-3">
-                <button class="btn btn-primary me-2" type="button" onclick="addToGroup();">Add to Group</button>
-                <button class="btn btn-primary" type="button" onclick="removeFromGroup();">Remove from Group</button>
-            </div>
-        </div>
     </div>
+
 
 </div>
 
